[tool.poetry]
name = "secimport"
version = "0.6.3"
description = "A sandbox/supervisor for python modules."
authors = ["Avi Lumelsky"]
license = "MIT"
homepage = "https://github.com/avilum/secimport"
readme = "README.md"
packages = [
    { include = "secimport", from = "src" },
]
include = ["src/secimport/templates/**/*.d","src/secimport/profiles/*",]

[tool.poetry.scripts]
secimport = 'secimport.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^6.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
